--- a/services/search-discovery/package.json
+++ b/services/search-discovery/package.json
@@ -26,12 +26,16 @@
   "author": "Nozama Team",
   "license": "MIT",
   "dependencies": {
+    "@apollo/server": "^4.10.0",
     "axios": "^1.6.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dataloader": "^2.2.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
+    "graphql": "^16.8.1",
+    "graphql-tag": "^2.12.6",
     "helmet": "^7.1.0",
     "joi": "^17.11.0",
     "mongoose": "^8.0.3",
