--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -112,23 +112,66 @@ services:
   #   extra_hosts:
   #     - "host.docker.internal:host-gateway"
 
-  # Identity & Reputation Service (Placeholder - To be implemented)
-  # identity-reputation:
-  #   build:
-  #     context: ./services/identity-reputation
-  #     dockerfile: Dockerfile
-  #   container_name: nozama-identity-reputation
-  #   restart: unless-stopped
-  #   ports:
-  #     - "3001:3001"
-  #   environment:
-  #     - NODE_ENV=${NODE_ENV:-production}
-  #     - PORT=3001
-  #     - BLOCKCHAIN_RPC_URL=${BLOCKCHAIN_RPC_URL:-http://host.docker.internal:8545}
-  #   networks:
-  #     - nozama-network
-  #   extra_hosts:
-  #     - "host.docker.internal:host-gateway"
+  # MongoDB Database (shared by identity-reputation and other services)
+  mongodb:
+    image: mongo:7
+    container_name: nozama-mongodb
+    ports:
+      - "27017:27017"
+    environment:
+      - MONGO_INITDB_DATABASE=nozama-identity
+    volumes:
+      - mongodb_data:/data/db
+      - ./services/identity-reputation/init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
+    networks:
+      - nozama-network
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
+
+  # Identity & Reputation Service
+  identity-reputation:
+    build:
+      context: ./services/identity-reputation
+      dockerfile: Dockerfile
+    container_name: nozama-identity-reputation
+    restart: unless-stopped
+    ports:
+      - "3001:3001"
+    environment:
+      - NODE_ENV=${NODE_ENV:-production}
+      - PORT=3001
+      - API_VERSION=v1
+      - MONGODB_URI=${MONGODB_URI:-mongodb://mongodb:27017/nozama-identity}
+      - MONGODB_DB_NAME=${MONGODB_IDENTITY_DB:-nozama-identity}
+      - BLOCKCHAIN_RPC_URL=${BLOCKCHAIN_RPC_URL:-http://host.docker.internal:8545}
+      - REPUTATION_CONTRACT_ADDRESS=${REPUTATION_CONTRACT_ADDRESS}
+      - ADMIN_API_KEY=${ADMIN_API_KEY:-admin-secret-key}
+      - WEBHOOK_SECRET=${WEBHOOK_SECRET:-webhook-secret}
+      - CORS_ORIGIN=${CORS_ORIGIN:-http://localhost:3000,http://localhost:5173}
+      - LOG_LEVEL=${LOG_LEVEL:-info}
+      - RATE_LIMIT_WINDOW_MS=${RATE_LIMIT_WINDOW_MS:-900000}
+      - RATE_LIMIT_MAX_REQUESTS=${RATE_LIMIT_MAX_REQUESTS:-100}
+    depends_on:
+      - mongodb
+    networks:
+      - nozama-network
+    volumes:
+      - identity-logs:/app/logs
+      - ./contracts/artifacts:/app/contracts/artifacts:ro
+      - ./deployment.json:/app/deployment.json:ro
+    healthcheck:
+      test: ["CMD", "node", "-e", "require('http').get('http://localhost:3001/api/v1/health', (res) => { process.exit(res.statusCode === 200 ? 0 : 1); })"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
+      start_period: 15s
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
 networks:
   nozama-network:
@@ -139,10 +182,12 @@ volumes:
     driver: local
   order-logs:
     driver: local
+  identity-logs:
+    driver: local
+  mongodb_data:
+    driver: local
   # Add more volumes as services are added
   # listing-logs:
   #   driver: local
   # payment-logs:
-  #   driver: local
-  # identity-logs:
   #   driver: local
